--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,5 @@ jobs:
 
       - name: Deploy
         run: |
-          run: gcloud container clusters get-credentials k8s --zone us-central1
+          gcloud container clusters get-credentials k8s --zone us-central1
           kubectl apply -f kubernetes/deployment.yml
-# Teste4
