Corrigido o nome do kluster kubernate

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,5 +41,5 @@ jobs:
 
       - name: Deploy
         run: |
-          gcloud container clusters get-credentials k8s --zone us-central1
+          gcloud container clusters get-credentials k8s-at --zone us-central1
           kubectl apply -f kubernetes/deployment.yml
